<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="1">
    
    
    <LinearLayout
   	   android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="0.50"
       android:layout_marginBottom="10dp"
    >
    
        
        <TextView 
            android:id="@+id/textViewTitleMainPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/darkBlue"
            android:text="@string/textMainActivity"
            android:gravity="center"
            android:textSize="50sp"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:shadowDx="-1"
            android:shadowDy="-1"
            
        />
        
    </LinearLayout>
    
   	<LinearLayout
   	   android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="0.25"
       android:layout_marginBottom="20dp"
    >
    <Button
        	android:id="@+id/buttonChoosePdfFile"
        	android:layout_width="0dp"
        	android:layout_marginLeft="5dp"
        	android:background="@drawable/round_button_cece"
        	android:layout_height="match_parent"
        	android:text="@string/buttonMenuBrowsePdf"
        	android:textColor="@color/white"
        	android:textSize="20sp"
        	android:layout_weight="0.5" />
    	
    	
	<Button
       		android:id="@+id/buttonOpenLastPdfFile"
       		android:layout_width="0dp"
       		android:layout_marginLeft="10dp"
       		android:background="@drawable/round_button_green"
       		android:layout_height="match_parent"
       		android:text="@string/buttonMenuReadCurrentFile"
       		android:textColor="@color/white"
       		android:textSize="20sp"
       		android:layout_weight="0.5" />
   	    
   	    
    </LinearLayout>
   	
   	 <LinearLayout
   	   android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="0.25"
      android:layout_marginBottom="20dp"
     >
   	 	<Button
       		android:id="@+id/buttonOpenDictionary"
       		android:layout_width="0dp"
       		android:layout_marginLeft="5dp"
       		android:background="@drawable/round_button"
       		android:layout_height="match_parent"
       		android:text="@string/buttonViewDictionary"
       		android:textColor="@color/white"
       		android:textSize="20sp"
       		android:layout_weight="0.5"/>
    
    
    	<Button
       		android:id="@+id/buttonExerciseDictionary"
       		android:layout_width="0dp"
       		android:layout_marginLeft="10dp"
       		android:background="@drawable/round_button_menu_yellow"
       		android:layout_height="match_parent"
       		android:text="@string/buttonMenuExercise"
       		android:textColor="@color/white"
       		android:textSize="20sp"
       		android:layout_weight="0.5"/>
   	     
   	     
    </LinearLayout>



</LinearLayout> 


