<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:id="@+id/layoutExerciseFragment"
>

     <EditText
            android:id="@+id/CellAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:hint="@string/exercise_cell_translation"
            android:imeOptions="actionDone"
            android:textAppearance="?android:attr/textAppearanceLarge" 
      />
      
    <LinearLayout
        android:id="@+id/aa"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:gravity="center"
        android:layout_below="@+id/CellAnswer"
     >
    	<Button 
            android:text="@string/exercise_cell_check" 
            android:id="@+id/ButtonCheckAnswer"
            android:layout_width="0dp"
            android:background="@drawable/selector_button_check"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="40dp"
           
            android:layout_weight="0.33"
            
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
    	</Button>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/bb"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:gravity="center"
        android:layout_below="@+id/aa"
        android:layout_marginTop="20dp"
     >
    	<Button 
            android:text="@string/exercise_cell_See_solution" 
            android:id="@+id/ButtonSeeAnswer"
            android:layout_width="0dp"
            android:background="@color/lightRed"
            android:textColor="@color/darkRed"
            android:gravity="center"
            android:textSize="40dp"
           
            android:layout_weight="0.33"

            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
    	</Button>
    </LinearLayout>
    
     
    <ExpandableListView
    	android:id="@+id/expListViewClues"
    	android:layout_height="match_parent"
    	android:layout_width="match_parent"
     	android:childDivider="#00000000"
     	android:groupIndicator="@drawable/exp_list_selector"
		android:layout_below="@+id/bb"
    /> 
	
</RelativeLayout>
    

    

